--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -29,7 +29,7 @@ jobs:
       run: cd ./packages/infra
 
     - name: Check directory
-      run: ls -l>
+      run: ls -l
 
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
