--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -4,52 +4,49 @@ on:
   push:
     branches: [ "main" ]
 
+env:
+  TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
+  INFRA_DIR: ./packages/infra
+
 permissions:
   contents: read
 
 jobs:
   terraform:
-    name: 'Terraform'
     runs-on: ubuntu-latest
 
-    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
-    defaults:
-      run:
-        shell: bash
-
     steps:
-    # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
-      uses: actions/checkout@v4
+      - name: Checkout
+        id: checkout
+        uses: actions/checkout@v4
 
+      - name: Setup Terraform
+        id: setup-terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          cli_config_credentials_token: ${{ env.TF_API_TOKEN }}
+        needs: checkout
 
+      - name: Terraform Init
+        id: terraform-init
+        working-directory: ${{ env.INFRA_DIR }}
+        run: terraform init
+        needs: setup-terraform
 
-    # Change directory to /packages/infra
-    - name: Change directory
-      run: cd ./packages/infra
+      - name: Terraform Format
+        id: terraform-format
+        working-directory: ${{ env.INFRA_DIR }}
+        run: terraform fmt -check
+        needs: terraform-init
 
-    - name: Check directory
-      run: ls -l
+      - name: Terraform Plan
+        id: terraform-plan
+        working-directory: ${{ env.INFRA_DIR }}
+        run: terraform plan -input=false
+        needs: terraform-format
 
-    # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v3
-      with:
-        cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-
-    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-    - name: Terraform Init
-      run: terraform init
-
-    # Checks that all Terraform configuration files adhere to a canonical format
-    - name: Terraform Format
-      run: terraform fmt -check
-
-    # Generates an execution plan for Terraform
-    - name: Terraform Plan
-      run: terraform plan -input=false
-
-      # On push to "main", build or change infrastructure according to Terraform configuration files
-      # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
-    - name: Terraform Apply
-      run: terraform apply -auto-approve -input=false
+      - name: Terraform Apply
+        id: terraform-apply
+        working-directory: ${{ env.INFRA_DIR }}
+        run: terraform apply -auto-approve -input=false
+        needs: terraform-plan
