gh action add PR workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,8 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  terraform:
+  update-infra:
+    name: Update infra
     runs-on: ubuntu-latest
 
     steps:
