--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,49 +4,10 @@ on:
   push:
     branches: [ "main" ]
 
-env:
-  TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
-  INFRA_DIR: ./packages/infra
-
 permissions:
   contents: read
 
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: false
-
 jobs:
-  update-infra:
-    name: Update infra
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        id: checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Terraform
-        id: setup-terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          cli_config_credentials_token: ${{ env.TF_API_TOKEN }}
-
-      - name: Terraform Init
-        id: terraform-init
-        working-directory: ${{ env.INFRA_DIR }}
-        run: terraform init
-
-      - name: Terraform Format
-        id: terraform-format
-        working-directory: ${{ env.INFRA_DIR }}
-        run: terraform fmt -check
-
-      - name: Terraform Plan
-        id: terraform-plan
-        working-directory: ${{ env.INFRA_DIR }}
-        run: terraform plan -input=false
-
-      - name: Terraform Apply
-        id: terraform-apply
-        working-directory: ${{ env.INFRA_DIR }}
-        run: terraform apply -auto-approve -input=false
+  check-infra:
+    name: Check infra
+    uses: ./.github/workflows/check-infra.yml
