workflow: create actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,4 +10,4 @@ permissions:
 jobs:
   check-infra:
     name: Check infra
-    uses: ./.github/workflows/check-infra.yml
+    uses: ./.github/actions/check-infra
