--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -9,4 +9,4 @@ permissions:
 jobs:
   check-infra:
     name: Check infra
-    uses: ./.github/actions/check-infra
+    uses: ./.github/actions/check-infra@${{github.ref}}
