--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -9,4 +9,7 @@ permissions:
 jobs:
   check-infra:
     name: Check infra
-    uses: ./.github/actions/check-infra@${{github.ref}}
+    uses: ./.github/actions/check-infra
+    with:
+      TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
+      INFRA_DIR: ./packages/infra
