--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,14 +7,22 @@ on:
 jobs:
   check-infra:
     name: Check infra
-    uses: ./.github/actions/check-infra@${{github.ref}}
+    uses: ./.github/actions/check-infra
+    with:
+      TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
+      INFRA_DIR: ./packages/infra
 
   deploy-infra:
     name: Deploy infra
     needs: check-infra
-    uses: ./.github/actions/deploy-infra@${{github.ref}}
+    uses: ./.github/actions/deploy-infra
+    with:
+      TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
+      INFRA_DIR: ./packages/infra
 
   deploy-app:
     name: Deploy app
     needs: deploy-infra
-    uses: ./.github/actions/deploy-app@${{github.ref}}
+    uses: ./.github/actions/deploy-app
+    with:
+      CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
