--- a/.github/actions/deploy-app/action.yml
+++ b/.github/actions/deploy-app/action.yml
@@ -1,14 +1,9 @@
 name: 'Deploy app'
 
-permissions:
-  contents: read
-
-env:
-  CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: false
+inputs:
+  CLOUDFLARE_API_TOKEN:
+    description: 'The Cloudflare API token'
+    required: true
 
 runs:
   using: "composite"
@@ -17,6 +12,6 @@ runs:
     - name: Deploy api
       uses: cloudflare/wrangler-action@v3
       with:
-        apiToken: ${{ env.CLOUDFLARE_API_TOKEN }}
+        apiToken: ${{ inputs.CLOUDFLARE_API_TOKEN }}
         command: deploy --env production
         workingDirectory: "./packages/api"
