--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,11 +3,14 @@ name: 'Update infra'
 on:
   push:
     branches: [ "main" ]
-    
+
 permissions:
   contents: read
 
 jobs:
   check-infra:
     name: Check infra
-    uses: ./.github/actions/check-infra@${{github.ref}}
+    uses: ./.github/actions/check-infra
+    with:
+      TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
+      INFRA_DIR: ./packages/infra
