--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,25 +4,38 @@ on:
   release:
     types: [published]
 
+
 jobs:
   check-infra:
     name: Check infra
-    uses: ./.github/actions/check-infra
-    with:
-      TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
-      INFRA_DIR: ./packages/infra
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Run Check Infra Action
+        uses: ./.github/actions/check-infra
+        with:
+          TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
+          INFRA_DIR: ./packages/infra
 
   deploy-infra:
-    name: Deploy infra
+    name: Check infra
+    runs-on: ubuntu-latest
     needs: check-infra
-    uses: ./.github/actions/deploy-infra
-    with:
-      TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
-      INFRA_DIR: ./packages/infra
+
+    steps:
+      - name: Run Check Infra Action
+        uses: ./.github/actions/deploy-infra
+        with:
+          TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
+          INFRA_DIR: ./packages/infra
 
   deploy-app:
     name: Deploy app
+    runs-on: ubuntu-latest
     needs: deploy-infra
-    uses: ./.github/actions/deploy-app
-    with:
-      CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+
+    steps:
+      - name: Run Deploy App Action
+        uses: ./.github/actions/deploy-app
+        with:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
