--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - use: actions/checkout@v4
+      - uses: actions/checkout@v4
       - name: Run Check Infra Action
         uses: ./.github/actions/check-infra
         with:
