--- a/.github/actions/check-infra/action.yml
+++ b/.github/actions/check-infra/action.yml
@@ -7,7 +7,7 @@ inputs:
   INFRA_DIR:
     description: 'The directory where Terraform configurations are located'
     required: true
-    default: './packages/infra'
+    default: 'packages/infra'
 
 runs:
   using: "composite"
