--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - use: actions/checkout@v4
+      - uses: actions/checkout@v4
       - name: Run Check Infra Action
         uses: /.github/actions/check-infra
         with:
