--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,8 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Run Check Infra Action
         uses: ./.github/actions/check-infra
@@ -26,8 +25,7 @@ jobs:
     needs: check-infra
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Run Check Infra Action
         uses: ./.github/actions/deploy-infra
@@ -41,8 +39,7 @@ jobs:
     needs: deploy-infra
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Run Deploy App Action
         uses: ./.github/actions/deploy-app
