--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -13,6 +13,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
+      - run: ls -la
+
       - name: Run Check Infra Action
         uses: .github/actions/check-infra
         with:
