--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -17,7 +17,7 @@ jobs:
       - run: ls -la
 
       - name: Run Check Infra Action
-        uses: .github/actions/check-infra
+        uses: ./.github/actions/check-infra
         with:
           TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
-          INFRA_DIR: packages/infra
+          INFRA_DIR: ./packages/infra
