--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,14 +20,14 @@ jobs:
           INFRA_DIR: ./packages/infra
 
   deploy-infra:
-    name: Check infra
+    name: Deploy infra
     runs-on: ubuntu-latest
     needs: check-infra
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Run Check Infra Action
+      - name: Run Deploy Infra Action
         uses: ./.github/actions/deploy-infra
         with:
           TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
