--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,5 +19,5 @@ jobs:
         uses: ./.github/actions/check-infra
         with:
           TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
-          INFRA_DIR: ./packages/infra
+          INFRA_DIR: ./packages/infra/staging
 
