--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
         uses: ./.github/actions/check-infra
         with:
           TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
-          INFRA_DIR: ./packages/infra
+          INFRA_DIR: ./packages/infra/prod
 
   deploy-infra:
     name: Deploy infra
@@ -31,7 +31,7 @@ jobs:
         uses: ./.github/actions/deploy-infra
         with:
           TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
-          INFRA_DIR: ./packages/infra
+          INFRA_DIR: ./packages/infra/prod
 
   deploy-app:
     name: Deploy app
@@ -46,3 +46,4 @@ jobs:
         with:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          API_ENV: production
