--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,3 +21,17 @@ jobs:
           TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
           INFRA_DIR: ./packages/infra/staging
 
+  deploy-infra:
+    name: Deploy infra
+    runs-on: ubuntu-latest
+    needs: check-infra
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Run Deploy Infra Action
+        uses: ./.github/actions/deploy-infra
+        with:
+          TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
+          INFRA_DIR: ./packages/infra/staging
+
