--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,3 +35,17 @@ jobs:
           TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
           INFRA_DIR: ./packages/infra/staging
 
+  deploy-app:
+    name: Deploy app
+    runs-on: ubuntu-latest
+    needs: deploy-infra
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Run Deploy App Action
+        uses: ./.github/actions/deploy-app
+        with:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          API_ENV: staging
