--- a/.github/actions/deploy-app/action.yml
+++ b/.github/actions/deploy-app/action.yml
@@ -28,5 +28,5 @@ runs:
       with:
         apiToken: ${{ inputs.CLOUDFLARE_API_TOKEN }}
         accountId: ${{ inputs.CLOUDFLARE_ACCOUNT_ID }}
-        command: deploy --env ${{ inputs.API_ENV }}
+        command: pages deploy --branch ${{ inputs.API_ENV }}
         workingDirectory: "./apps/marketing"
