--- a/.github/actions/deploy-app/action.yml
+++ b/.github/actions/deploy-app/action.yml
@@ -15,6 +15,13 @@ runs:
   using: "composite"
   steps:
     - uses: actions/checkout@v4
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Build apps
+      run: npm run build
+
     - name: Deploy api
       uses: cloudflare/wrangler-action@v3
       with:
