--- a/.github/actions/deploy-app/action.yml
+++ b/.github/actions/deploy-app/action.yml
@@ -7,8 +7,8 @@ inputs:
   CLOUDFLARE_ACCOUNT_ID:
     description: 'The Cloudflare account ID'
     required: true
-  API_ENV:
-    description: 'The api environment to deploy to'
+  ENVIRONMENT:
+    description: 'The environment to deploy to'
     required: true
 
 runs:
@@ -31,11 +31,3 @@ runs:
         accountId: ${{ inputs.CLOUDFLARE_ACCOUNT_ID }}
         command: deploy --env ${{ inputs.API_ENV }}
         workingDirectory: "./apps/api"
-
-    - name: Deploy marketing
-      uses: cloudflare/wrangler-action@v3
-      with:
-        apiToken: ${{ inputs.CLOUDFLARE_API_TOKEN }}
-        accountId: ${{ inputs.CLOUDFLARE_ACCOUNT_ID }}
-        command: pages deploy .vercel/output/static --project-name marketing-${{ inputs.API_ENV }}
-        workingDirectory: "./apps/marketing"
