--- a/apps/api/wrangler.toml
+++ b/apps/api/wrangler.toml
@@ -1,12 +1,11 @@
 #:schema node_modules/wrangler/config-schema.json
+name = "api"
 main = "src/index.ts"
 compatibility_date = "2024-08-21"
 
 [env.production]
-name = "api-production"
 
 [env.staging]
-name = "api-staging"
 
 # Automatically place your workloads in an optimal location to minimize latency.
 # If you are running back-end logic in a Worker, running it closer to your back-end infrastructure
