--- a/apps/marketing/wrangler.toml
+++ b/apps/marketing/wrangler.toml
@@ -1,13 +1,8 @@
 #:schema node_modules/wrangler/config-schema.json
+name = "marketing"
 compatibility_date = "2024-08-21"
 compatibility_flags = ["nodejs_compat"]
 pages_build_output_dir = ".vercel/output/static"
-
-[env.production]
-name = "marketing-production"
-
-[env.staging]
-name = "marketing-staging"
 
 # Automatically place your workloads in an optimal location to minimize latency.
 # If you are running back-end logic in a Pages Function, running it closer to your back-end infrastructure
