--- a/apps/api/wrangler.toml
+++ b/apps/api/wrangler.toml
@@ -3,9 +3,8 @@ name = "api"
 main = "src/index.ts"
 compatibility_date = "2024-08-21"
 
-[env.production]
-
 [env.staging]
+name = "api-staging"
 
 # Automatically place your workloads in an optimal location to minimize latency.
 # If you are running back-end logic in a Worker, running it closer to your back-end infrastructure
