--- a/apps/api/wrangler.toml
+++ b/apps/api/wrangler.toml
@@ -3,6 +3,9 @@ name = "api"
 main = "src/index.ts"
 compatibility_date = "2024-08-21"
 
+[env.production]
+name = "api-production"
+
 [env.staging]
 name = "api-staging"
 
