--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -13,5 +13,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: echo "${{ vars.ENVIRONMENT }}"
+      - run: echo ${{ vars.ENVIRONMENT }}
         shell: bash
