--- a/.github/actions/infra/action.yml
+++ b/.github/actions/infra/action.yml
@@ -1,5 +1,50 @@
 name: 'Update infra'
 
+inputs:
+  WORKSPACE_NAME:
+    description: 'The name of the Terraform workspace'
+    required: true
+  API_URL:
+    description: 'The API URL'
+    required: true
+  WEBSITE_URL:
+    description: 'The website URL'
+    required: true
+  ENVIRONMENT:
+    description: 'The environment'
+    required: true
+  CLOUDFLARE_API_TOKEN:
+    description: 'The Cloudflare API token'
+    required: true
+  CLOUDFLARE_ZONE_ID:
+    description: 'The Cloudflare zone ID'
+    required: true
+  CLOUDFLARE_ACCOUNT_ID:
+    description: 'The Cloudflare account ID'
+    required: true
+  AWS_ACCESS_KEY_ID:
+    description: 'The AWS access key ID'
+    required: true
+  AWS_SECRET_ACCESS_KEY:
+    description: 'The AWS secret access key'
+    required: true
+  AWS_ENDPOINT_URL_S3:
+    description: 'The AWS endpoint URL for S3'
+    required: true
+
+env:
+  INFRA_DIR: './packages/infra'
+  CLOUDFLARE_API_TOKEN: ${{ inputs.CLOUDFLARE_API_TOKEN }}
+  CLOUDFLARE_ZONE_ID: ${{ inputs.CLOUDFLARE_ZONE_ID }}
+  CLOUDFLARE_ACCOUNT_ID: ${{ inputs.CLOUDFLARE_ACCOUNT_ID }}
+  AWS_ACCESS_KEY_ID: ${{ inputs.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ inputs.AWS_SECRET_ACCESS_KEY }}
+  AWS_ENDPOINT_URL_S3: ${{ inputs.AWS_ENDPOINT_URL_S3 }}
+  API_URL: ${{ inputs.API_URL }}
+  WEBSITE_URL: ${{ inputs.WEBSITE_URL }}
+  ENVIRONMENT: ${{ inputs.ENVIRONMENT }}
+  WORKSPACE_NAME: ${{ inputs.WORKSPACE_NAME }}
+
 runs:
   using: "composite"
   steps:
