--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,16 +11,16 @@ jobs:
   deploy-infra:
     environment: production
     env:
-      BRANCH_NAME: ${{ github.head_ref }}
-      API_URL: ${{ vars.API_URL }}
-      WEBSITE_URL: ${{ vars.WEBSITE_URL }}
-      ENVIRONMENT: ${{ vars.ENVIRONMENT }}
-      CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}
-      CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-      CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_ENDPOINT_URL_S3: ${{ secrets.AWS_ENDPOINT_URL_S3 }}
+      TF_VAR_BRANCH_NAME: ${{ github.head_ref }}
+      TF_VAR_API_URL: ${{ vars.API_URL }}
+      TF_VAR_WEBSITE_URL: ${{ vars.WEBSITE_URL }}
+      TF_VAR_ENVIRONMENT: ${{ vars.ENVIRONMENT }}
+      TF_VAR_CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}
+      TF_VAR_CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+      TF_VAR_CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
 
 
     name: Deploy production infra
@@ -29,8 +29,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Deploy preview infra
+      - name: Deploy
         uses: ./.github/actions/infra
         with:
           INFRA_DIR: './packages/infra'
-          BRANCH_NAME: ${{ env.BRANCH_NAME }}
+          BRANCH_NAME: ${{ env.TF_VAR_BRANCH_NAME }}
