--- a/.github/workflows/create-preview.yml
+++ b/.github/workflows/create-preview.yml
@@ -34,3 +34,21 @@ jobs:
         with:
           INFRA_DIR: './packages/infra'
           BRANCH_NAME: ${{ env.TF_VAR_BRANCH_NAME }}
+
+  deploy-apps:
+    environment: preview
+    env:
+      BRANCH_NAME: ${{ github.head_ref }}
+    name: Deploy apps
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Deploy
+        uses: ./.github/actions/deploy-app
+        with:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          ENVIRONMENT: ${{ vars.ENVIRONMENT }}
+          BRANCH_NAME: ${{ env.BRANCH_NAME }}
