--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -14,7 +14,7 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_ENDPOINT_URL_S3: ${{ secrets.AWS_ENDPOINT_URL_S3 }}
-      TF_VAR_BRANCH_NAME: ${{ github.head_ref }}
+      TF_VAR_BRANCH_NAME: ${{ github.ref_name }}
       TF_VAR_API_URL: ${{ vars.API_URL }}
       TF_VAR_WEBSITE_URL: ${{ vars.WEBSITE_URL }}
       TF_VAR_ENVIRONMENT: ${{ vars.ENVIRONMENT }}
