--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -39,7 +39,7 @@ jobs:
     needs: deploy-infra
     environment: staging
     env:
-      BRANCH_NAME: ${{ github.head_ref }}
+      BRANCH_NAME: ${{ env.TF_VAR_BRANCH_NAME }}
     name: Deploy apps
     runs-on: ubuntu-latest
     steps:
@@ -52,4 +52,4 @@ jobs:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           ENVIRONMENT: ${{ vars.ENVIRONMENT }}
-          BRANCH_NAME: ${{ env.BRANCH_NAME }}
+          BRANCH_NAME: ${{ env.TF_VAR_BRANCH_NAME }}
