--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_ENDPOINT_URL_S3: ${{ secrets.AWS_ENDPOINT_URL_S3 }}
-      TF_VAR_BRANCH_NAME: ${{ github.head_ref }}
+      TF_VAR_BRANCH_NAME: production
       TF_VAR_API_URL: ${{ vars.API_URL }}
       TF_VAR_WEBSITE_URL: ${{ vars.WEBSITE_URL }}
       TF_VAR_ENVIRONMENT: ${{ vars.ENVIRONMENT }}
@@ -39,7 +39,7 @@ jobs:
     needs: deploy-infra
     environment: production
     env:
-      BRANCH_NAME: ${{ github.head_ref }}
+      BRANCH_NAME: production
     name: Deploy apps
     runs-on: ubuntu-latest
     steps:
