--- a/turbo.json
+++ b/turbo.json
@@ -6,6 +6,7 @@
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
       "outputs": ["dist/**", ".next/**", "!.next/cache/**"]
     },
+    "build-ci": {},
     "lint": {},
     "type-check": {},
     "dev": {
