--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,13 +3,17 @@
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy --minify",
-    "cf-typegen": "wrangler types --env-interface CloudflareBindings"
+    "cf-typegen": "wrangler types --env-interface CloudflareBindings",
+    "lint": "eslint ."
   },
   "dependencies": {
+    "@repo/supabase": "*",
+    "@supabase/supabase-js": "^2.45.3",
     "hono": "^4.5.9"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240821.1",
+    "typescript": "^5.3.3",
     "wrangler": "^3.72.3"
   }
 }
