--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -19,10 +19,10 @@
     "type-check": "tsc --noEmit"
   },
   "peerDependencies": {
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "next": "^14.2.5"
   },
   "devDependencies": {
-    "@repo/eslint-config": "*",
     "@repo/tailwind-config": "*",
     "@repo/typescript-config": "*",
     "@types/react": "^18.2.61",
