--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
 		"supabase:reset": "npm run reset --workspace=packages/supabase",
 		"supabase:migrate": "mnpm run igrate --workspace=packages/supabase",
 		"supabase:seed": "npm run run seed --workspace=packages/supabase",
-		"lint": "npm run format-and-lint --workspace=packages/biome",
-		"lint:fix": "npm run format-and-lint:fix --workspace=packages/biome",
+		"lint": "biome check .",
+		"lint:fix": "biome check . --write",
 		"type-check": "turbo type-check",
 		"clean": "turbo clean",
 		"format": "prettier --write \"**/*.{ts,tsx,md}\"",
