--- a/.github/workflows/create-preview.yml
+++ b/.github/workflows/create-preview.yml
@@ -54,3 +54,41 @@ jobs:
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           ENVIRONMENT: ${{ vars.ENVIRONMENT }}
           BRANCH_NAME: ${{ env.BRANCH_NAME }}
+
+      - name: Add link to PR comment
+        uses: actions/github-script@v7
+        if: github.event_name == 'pull_request'
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            // 1. Retrieve existing bot comments for the PR
+            const { data: comments } = await github.rest.issues.listComments({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+            })
+            const botComment = comments.find(comment => {
+              return comment.user.type === 'Bot' && comment.body.includes('Preview URL')
+            })
+            
+            // 2. Prepare format of the comment
+            const output = `#### Preview URL 👉
+            
+            [https://preview-${{ github.head_ref}}-${{ vars.WEBSITE_URL }}/](https://preview-${{ github.head_ref}}-${{ vars.WEBSITE_URL }}/)`
+          
+            // 3. If we have a comment, update it, otherwise create a new one
+            if (botComment) {
+              github.rest.issues.updateComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                comment_id: botComment.id,
+                body: output
+              })
+            } else {
+              github.rest.issues.createComment({
+                issue_number: context.issue.number,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                body: output
+              })
+            }
