workflow: fix preview infra

--- a/.github/workflows/create-preview.yml
+++ b/.github/workflows/create-preview.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - run: echo "Main branch name is ${{ env.TF_VAR_BRANCH_NAME }}"
+        shell: bash
+
       - name: Deploy
         uses: ./.github/actions/infra
         with:
